apps/production/spoolman/spoolman-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spoolman-ingressroute
  namespace: spoolman
  annotations:
    gethomepage.dev/href: "https://spoolman.hephaestus.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Spoolman"
    gethomepage.dev/description: "Application for managing filament spools."
    gethomepage.dev/app: spoolman
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://raw.githubusercontent.com/Donkie/Spoolman/cd274a9968af26eae5c14a28d6a8c9ae61fccb7a/client/icons/spoolman.svg"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`spoolman.hephaestus.markmk.com`)
      kind: Rule
      services:
        - name: spoolman
          port: 80
